--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Geo-Google
-version:      0.02
+version:      0.03
 version_from: lib/Geo/Google.pm
 installdirs:  site
 requires:
+    Digest::MD5:                   0
+    HTML::Entities:                0
+    JSON:                          0
     LWP::Simple:                   0
     URI::Escape:                   0
-    XML::DOM:                      0
-    XML::DOM::XPath:               0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
